Bug 380704. compile error [@nsOfflineCacheDevice::Init]. Fix the bustage for bug 370195 on Solaris SPARC/x86 with Sun Compiler.r+sr=jst.